Use EditForm, fix Listener needed restart issue, split Tasks into yml files, added Author to tasks, fixed tasks/taskkill/setoptions tasks
Former-commit-id: d23301980e3bad67d7dc96a0fd6fc222a55139e2
