# Covenant/API/Models/GruntTaskOption.cs
@@ -24,7 +24,7 @@ namespace Covenant.API.Models
         /// <summary>
         /// Initializes a new instance of the GruntTaskOption class.
         /// </summary>
-        public GruntTaskOption(int? id = default(int?), string name = default(string), string value = default(string), string defaultValue = default(string), string description = default(string), IList<string> suggestedValues = default(IList<string>), bool? optional = default(bool?), bool? displayInCommand = default(bool?), int? gruntTaskId = default(int?))
+        public GruntTaskOption(int? id = default(int?), string name = default(string), string value = default(string), string defaultValue = default(string), string description = default(string), IList<string> suggestedValues = default(IList<string>), bool? optional = default(bool?), bool? displayInCommand = default(bool?), bool? fileOption = default(bool?), int? gruntTaskId = default(int?))
         {
             Id = id;
             Name = name;
@@ -34,6 +34,7 @@ namespace Covenant.API.Models
             SuggestedValues = suggestedValues;
             Optional = optional;
             DisplayInCommand = displayInCommand;
+            FileOption = fileOption;
             GruntTaskId = gruntTaskId;
             CustomInit();
         }
@@ -82,6 +83,11 @@ namespace Covenant.API.Models
         /// </summary>
         [JsonProperty(PropertyName = "displayInCommand")]
         public bool? DisplayInCommand { get; set; }
+
+        /// <summary>
+        /// </summary>
+        [JsonProperty(PropertyName = "fileOption")]
+        public bool? FileOption { get; set; }
 
         /// <summary>
         /// </summary>
